<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.hdmstuttgart.carfind.MainActivity">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />


    <item
        android:id="@+id/action_sample_data"
        android:orderInCategory="100"
        android:title="@string/action_sample_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_list"
        android:orderInCategory="100"
        android:title="@string/action_clear_list"
        app:showAsAction="never" />

</menu>